# punybuf

./: LICENSE  README.md
docs/: Attributes.md  BinaryFormat.md  Codegen.md  Language.md
pbd/: Cargo.toml
pbd/baked/: common.pbd  template.html
pbd/src/: binary_compat.rs  converter.rs  errors.rs  files.rs  flattener.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  rust_codegen.rs  validator.rs
pbd/src/codegen/: html.rs  mod.rs
pbd/test_files/: anonymous-flags.pbd  duplicate-fields-and-flags.pbd  duplicate-ids.pbd  duplicate-name-overrides.pbd  duplicate-names.pbd  enum-duplicate-default.pbd  extensions-before-native.pbd  extensions-enum-illegal.pbd  extensions-on-sealed.pbd  extensions.pbd  flags-invalid-syntax.pbd  id-overrides.pbd  layer-dependency-removal.pbd  layer-resolution.pbd  layer-transmutation.pbd  name-override-on-layer.pbd  resolving.pbd  sanity-test.pbd  ~anonymous-flags.result  ~duplicate-fields-and-flags.result  ~duplicate-name-overrides.result  ~duplicate-names.result  ~enum-duplicate-default.result  ~extensions-before-native.result  ~extensions-enum-illegal.result  ~extensions-on-sealed.result  ~extensions.result  ~flags-invalid-syntax.result  ~id-overrides.result  ~layer-dependency-removal.result  ~layer-resolution.result  ~layer-transmutation.result  ~name-override-on-layer.result  ~resolving.result  ~sanity-test.result
pbd/tests/: harness.rs
rust-punybuf_common/: Cargo.toml  README.md  build.rs
rust-punybuf_common/src/: const_macro.rs  lib.rs  test.rs  tokio.rs
vscode-syntax-highlighting/: CHANGELOG.md  README.md  package.json  (+1 more)
(+2 files in other folders)
