[package]
name = "pbd"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.37", features = ["cargo"]}
crc = "3.2.1"
json = "0.12.4"
markdown = "1.0.0"

[lib]
name = "punybuf"
path = "src/lib.rs"

[[test]]
name = "harness"
harness = false

[dev-dependencies]
diff_json = "0.1.1"
